<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/txtAppTitleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAppTitle"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/txtCostDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCostDesc"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txtMilesAmtMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtMilesAmtMain"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/txtEditMilesAmtMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtZero" />

    <TextView
        android:id="@+id/txtAutoPrefMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAutoPrefMain"
        android:layout_marginTop="5dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/radioSmartCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSmartCar"/>

        <RadioButton
            android:id="@+id/radioClassicSedan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtClassicSedan"/>

        <RadioButton
            android:id="@+id/radioMinivan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMinivan"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnEstimateCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEstimateCost"/>

</LinearLayout>