<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/txtAppTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAppTitle"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/txtSumDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSumDesc"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txtMilesAmtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/txtAutoPrefDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="5dp"/>
    <ImageView
        android:id="@+id/imgCar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/smartcar"
        android:maxHeight="100dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnRequestRide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRequestRide"
        android:layout_marginTop="5dp"/>
    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:layout_marginTop="5dp"/>

</LinearLayout>